# spudbox

./: CLAUDE.md  README.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build-release.yml  ci.yml  publish-release.yml
docs/: DESIGN_SYSTEM.md
src/: app.html  vitest.setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0004_sync.sql  0005_nullable_rating.sql  0006_hidden_albums.sql  0007_archived_tracks.sql  0008_album_date_added.sql
src-tauri/src/: error.rs  events.rs  lib.rs  mpris.rs  state.rs  tray.rs
src-tauri/src/audio/: analysis.rs  decode.rs  engine.rs  eq.rs  mod.rs  queue.rs  rms.rs
src-tauri/src/commands/: appearance.rs  device.rs  library.rs  mod.rs  playback.rs  sync.rs
src-tauri/src/db/: mod.rs  pool.rs  schema.rs
src-tauri/src/db/queries/: album_ratings.rs  albums.rs  artists.rs  genres.rs  hidden_albums.rs  mod.rs  scan_roots.rs  settings.rs  stats.rs  tracks.rs
src-tauri/src/device/: detection.rs  mod.rs  sync.rs
src-tauri/src/scanner/: art.rs  mod.rs  tags.rs  walk.rs
src-tauri/src/sync/: client.rs  mod.rs  pull.rs  push.rs  schema.rs
src/lib/: format.ts  search.test.ts  search.ts  sort.test.ts  sort.ts  types.ts
src/lib/api/: commands.ts  events.ts
src/lib/components/album/: AlbumHeader.svelte  TrackRow.svelte  TrackRow.test.ts
src/lib/components/browser/: AlbumGrid.svelte  (+1 more)
src/lib/stores/: device.svelte.ts  library.svelte.ts  player.svelte.ts  theme.svelte.ts  ui.svelte.ts  ui.test.ts
src/lib/styles/: theme.css
src/routes/: +layout.svelte  +page.svelte
(+16 files in other folders)
