[package]
name = "spudbox"
version = "0.1.0"
description = "Custom Linux music player with library browsing and hi-res FLAC playback"
authors = ["Luke Stebner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spudbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
arc-swap = "1"
crossbeam-channel = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rusqlite_migration = "1"
lofty = "0.21"
walkdir = "2"
notify = "6"
rayon = "1"
image = "0.25"
symphonia = { version = "0.5", features = ["all"] }
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
cpal = "0.15"
rubato = "0.15"
souvlaki = { version = "0.7", default-features = false, features = ["use_zbus"] }
tauri-plugin-dialog = "2.7.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

